fixed alignment error

--- a/frontend/components/universal_styling.css
+++ b/frontend/components/universal_styling.css
@@ -16,4 +16,5 @@ main {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 }
